external-service-external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
 type: ExternalName
 externalName: amaharjan.com
 ports:
 - port: 443
