hallowelt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hallowelt
spec:
  ports:
  - name: http
    port: 80
    targetPort: http  #this comes from pod
  selector:
    app: hallowelt
