hallowelt-ingress.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: hallowelt
spec:
  rules:
  - host: hallowelt.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hallowelt-nodeport
          servicePort: 80
